syntax = "proto3";

package program.proto;

option java_package = "io.typestream.grpc";

option go_package = "github.com/typestreamio/typestream/cli/pkg/program_service";

service ProgramService {
  rpc RunProgram(RunProgramRequest) returns (RunProgramResponse);
  rpc GetProgramOutput(GetProgramOutputRequest) returns (stream GetProgramOutputResponse);
  rpc CompleteProgram(CompleteProgramRequest) returns (CompleteProgramResponse);
}

message RunProgramRequest {
  string source = 1;
}

message RunProgramResponse {
  string id = 1;
  map<string, string> env = 2;
  string stdOut = 3;
  string stdErr = 4;
  bool hasMoreOutput = 5;
}

message GetProgramOutputRequest {
  string id = 1;
}

message GetProgramOutputResponse {
  string stdOut = 1;
  string stdErr = 2;
}

message CompleteProgramRequest {
  string source = 1;
  int32 cursor = 2;
}

message CompleteProgramResponse {
  repeated string value = 1;
}

